add_executable(hello-native-app WIN32 hello-native-app.c)
set_module_type(hello-native-app nativecui)
target_link_libraries(hello-native-app nt)
add_importlibs(hello-native-app ntdll)
add_cd_file(TARGET hello-native-app DESTINATION reactos/system32 FOR all)

add_executable(native-starter native-starter.c)
set_module_type(native-starter win32cui)
target_link_libraries(native-starter wine)
add_importlibs(native-starter user32 msvcrt kernel32 ntdll)
add_cd_file(TARGET native-starter DESTINATION reactos/system32 FOR all)
